samples/_failures_safe/1761348270_c54266_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dfddd2a2.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_dfddd2a2.c:183:9: error: expected declaration or statement at end of input
  183 |         if (dist[i] == INT_MAX) {
      |         ^~
./samples/SAFE/__tmp_dfddd2a2.c:183:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dfddd2a2.c:183:9: error: expected declaration or statement at end of input
